--- a/package.json
+++ b/package.json
@@ -135,5 +135,6 @@
     "imagemin-webp": "^7.0.0",
     "lodash": "^4.17.21",
     "react-router-dom": "^6.14.2"
-  }
+  },
+  "homepage": "/build/"
 }
